cabal-version:   3.4
name:            adf-tool
version:         0.1.0.0
synopsis:
    Simple tool to extract content from an ADF file (Amiga Disk File)

license:         MIT
license-file:    LICENSE
author:          Niklas Konstenius
maintainer:      niklas.konstenius@gmail.coms

-- A copyright notice.
-- copyright:
build-type:      Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files: CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable adf-tool
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        , attoparsec
        , attoparsec-binary
        , base               ^>=4.18.2.0
        , bytestring

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: GHC2021
